--- a/sheet5.html
+++ b/sheet5.html
@@ -41,67 +41,11 @@
     <div class="tab-content" id="myTabContent">
       <div class="tab-pane fade" id="Questions" role="tabpanel" aria-labelledby="Questions-tab">
 
-        <div class="row">
-
-          <div class="p-3 col-lg-6 col-md-12">
-            <div class="p-3 text-justify">
-              <!-- Embedding video -->
-
-
-              <!-- Paste your embed video link here -->
-              <iframe width="991" height="547" class="youtube-video"
-                src="https://www.youtube.com/embed/eaTYVYH6enw?list=PLM-vGSGVntt0kaBKeNPGqTaaSxw04kQP1"
-                title="YouTube video player" frameborder="0"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                allowfullscreen></iframe>
-
-              <iframe width="972" height="547" class="youtube-video"
-                src="https://www.youtube.com/embed/Z79KjSw7XEo?list=PLM-vGSGVntt0kaBKeNPGqTaaSxw04kQP1"
-                title="YouTube video player" frameborder="0"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                allowfullscreen></iframe>
-              <iframe width="972" height="547" class="youtube-video"
-                src="https://www.youtube.com/embed/Xa7LQjIbp9U?list=PLM-vGSGVntt0kaBKeNPGqTaaSxw04kQP1"
-                title="YouTube video player" frameborder="0"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                allowfullscreen></iframe>
-              <iframe width="972" height="547" class="youtube-video"
-                src="https://www.youtube.com/embed/dopnlAt1kqg?list=PLM-vGSGVntt0kaBKeNPGqTaaSxw04kQP1"
-                title="YouTube video player" frameborder="0"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                allowfullscreen></iframe>
-              <iframe width="972" height="547" class="youtube-video"
-                src="https://www.youtube.com/embed/KctfcYiVsRc?list=PLM-vGSGVntt0kaBKeNPGqTaaSxw04kQP1"
-                title="YouTube video player" frameborder="0"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                allowfullscreen></iframe>
-              <iframe width="972" height="547" class="youtube-video"
-                src="https://www.youtube.com/embed/7K7nssJ_06s?list=PLM-vGSGVntt0kaBKeNPGqTaaSxw04kQP1"
-                title="YouTube video player" frameborder="0"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                allowfullscreen></iframe>
-              <iframe width="972" height="547" class="youtube-video"
-                src="https://www.youtube.com/embed/Q3ifYWou95o?list=PLM-vGSGVntt0kaBKeNPGqTaaSxw04kQP1"
-                title="YouTube video player" frameborder="0"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                allowfullscreen></iframe>
-              <iframe width="972" height="547" class="youtube-video"
-                src="https://www.youtube.com/embed/HaGXgYb9yVs?list=PLM-vGSGVntt0kaBKeNPGqTaaSxw04kQP1"
-                title="YouTube video player" frameborder="0"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                allowfullscreen></iframe>
-              <iframe width="972" height="547" class="youtube-video"
-                src="https://www.youtube.com/embed/iUpxUOSOT7g?list=PLM-vGSGVntt0kaBKeNPGqTaaSxw04kQP1"
-                title="YouTube video player" frameborder="0"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                allowfullscreen></iframe>
-
-
-              <!-- embedding video finish -->
-            </div>
-          </div>
-
-        </div>
+        <iframe width="100%" height="673"
+          src="https://www.youtube.com/embed/videoseries?list=PLM-vGSGVntt0kaBKeNPGqTaaSxw04kQP1&ab_channel=Learnwithus"
+          title="YouTube video player" frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+          allowfullscreen></iframe>
 
       </div>
 
