--- a/sheet10.html
+++ b/sheet10.html
@@ -41,40 +41,11 @@
     <div class="tab-content" id="myTabContent">
       <div class="tab-pane fade" id="Questions" role="tabpanel" aria-labelledby="Questions-tab">
 
-        <div class="row">
-
-          <div class="p-3 col-lg-6 col-md-12">
-            <div class="p-3 text-justify">
-              <!-- Embedding video -->
-
-
-              <!-- Paste your embed video link here -->
-              <iframe class="youtube-video" width="972" height="547"
-                src="https://www.youtube.com/embed/0S7YCkbZa9c?list=PLM-vGSGVntt1eh3xvC-QRv7O2qrjtrd6k"
-                title="YouTube video player" frameborder="0"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                allowfullscreen></iframe>
-              <iframe class="youtube-video" width="972" height="547"
-                src="https://www.youtube.com/embed/lTYYBLBDreU?list=PLM-vGSGVntt1eh3xvC-QRv7O2qrjtrd6k"
-                title="YouTube video player" frameborder="0"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                allowfullscreen></iframe>
-              <iframe class="youtube-video" width="972" height="547"
-                src="https://www.youtube.com/embed/RZp9j4li_2Y?list=PLM-vGSGVntt1eh3xvC-QRv7O2qrjtrd6k"
-                title="YouTube video player" frameborder="0"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                allowfullscreen></iframe>
-              <iframe class="youtube-video" width="972" height="547"
-                src="https://www.youtube.com/embed/nHkkg44XTwc?list=PLM-vGSGVntt1eh3xvC-QRv7O2qrjtrd6k"
-                title="YouTube video player" frameborder="0"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                allowfullscreen></iframe>
-
-              <!-- embedding video finish -->
-            </div>
-          </div>
-
-        </div>
+        <iframe width="100%" height="673"
+          src="https://www.youtube.com/embed/videoseries?list=PLM-vGSGVntt1eh3xvC-QRv7O2qrjtrd6k&ab_channel=Learnwithus"
+          title="YouTube video player" frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+          allowfullscreen></iframe>
 
       </div>
 
