--- a/sheet8.html
+++ b/sheet8.html
@@ -41,75 +41,11 @@
     <div class="tab-content" id="myTabContent">
       <div class="tab-pane fade" id="Questions" role="tabpanel" aria-labelledby="Questions-tab">
 
-        <div class="row">
-
-          <div class="p-3 col-lg-6 col-md-12">
-            <div class="p-3 text-justify">
-              <!-- Embedding video -->
-
-
-              <!-- Paste your embed video link here -->
-              <iframe width="972" height="547" class="youtube-video"
-                src="https://www.youtube.com/embed/M34KzkUlZKk?list=PLM-vGSGVntt2r3DM70gCiTitRErRCCzIp"
-                title="YouTube video player" frameborder="0"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                allowfullscreen></iframe>
-              <iframe width="972" height="547" class="youtube-video"
-                src="https://www.youtube.com/embed/Vs9uAyMi2Uw?list=PLM-vGSGVntt2r3DM70gCiTitRErRCCzIp"
-                title="YouTube video player" frameborder="0"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                allowfullscreen></iframe>
-              <iframe width="972" height="547" class="youtube-video"
-                src="https://www.youtube.com/embed/D6OS5SC5GVo?list=PLM-vGSGVntt2r3DM70gCiTitRErRCCzIp"
-                title="YouTube video player" frameborder="0"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                allowfullscreen></iframe>
-              <iframe width="972" height="547" class="youtube-video"
-                src="https://www.youtube.com/embed/t4rFuPAp3xE?list=PLM-vGSGVntt2r3DM70gCiTitRErRCCzIp"
-                title="YouTube video player" frameborder="0"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                allowfullscreen></iframe>
-              <iframe width="972" height="547" class="youtube-video"
-                src="https://www.youtube.com/embed/zk5l1jJrdBA?list=PLM-vGSGVntt2r3DM70gCiTitRErRCCzIp"
-                title="YouTube video player" frameborder="0"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                allowfullscreen></iframe>
-              <iframe width="972" height="547" class="youtube-video"
-                src="https://www.youtube.com/embed/XBp-Zz6ani8?list=PLM-vGSGVntt2r3DM70gCiTitRErRCCzIp"
-                title="YouTube video player" frameborder="0"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                allowfullscreen></iframe>
-              <iframe width="972" height="547" class="youtube-video"
-                src="https://www.youtube.com/embed/TOfplJC5zXI?list=PLM-vGSGVntt2r3DM70gCiTitRErRCCzIp"
-                title="YouTube video player" frameborder="0"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                allowfullscreen></iframe>
-              <iframe width="972" height="547" class="youtube-video"
-                src="https://www.youtube.com/embed/4GHwX_laS4g?list=PLM-vGSGVntt2r3DM70gCiTitRErRCCzIp"
-                title="YouTube video player" frameborder="0"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                allowfullscreen></iframe>
-              <iframe width="972" height="547" class="youtube-video"
-                src="https://www.youtube.com/embed/k6msrousIVk?list=PLM-vGSGVntt2r3DM70gCiTitRErRCCzIp"
-                title="YouTube video player" frameborder="0"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                allowfullscreen></iframe>
-              <iframe width="972" height="547" class="youtube-video"
-                src="https://www.youtube.com/embed/a9S7GbFhpFw?list=PLM-vGSGVntt2r3DM70gCiTitRErRCCzIp"
-                title="YouTube video player" frameborder="0"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                allowfullscreen></iframe>
-              <iframe width="972" height="547" class="youtube-video"
-                src="https://www.youtube.com/embed/SbmOPUaV2Yg?list=PLM-vGSGVntt2r3DM70gCiTitRErRCCzIp"
-                title="YouTube video player" frameborder="0"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                allowfullscreen></iframe>
-
-              <!-- embedding video finish -->
-            </div>
-          </div>
-
-        </div>
+        <iframe width="100%" height="673"
+          src="https://www.youtube.com/embed/videoseries?list=PLM-vGSGVntt2r3DM70gCiTitRErRCCzIp&ab_channel=Learnwithus"
+          title="YouTube video player" frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+          allowfullscreen></iframe>
 
       </div>
 
