--- a/sheet2.html
+++ b/sheet2.html
@@ -14,7 +14,7 @@
 
   <link href="css/bootstrap.min.css" rel="stylesheet" />
 
-  <link href="css/sheet.css" rel="stylesheet" />
+  <link href="css/descriptive-sheets.css" rel="stylesheet" />
   <link href="css/MyStyle.css" rel="stylesheet" />
 
   <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
@@ -41,66 +41,11 @@
     <div class="tab-content" id="myTabContent">
       <div class="tab-pane fade" id="Questions" role="tabpanel" aria-labelledby="Questions-tab">
 
-        <div class="row">
-
-          <div class="p-3 col-lg-6 col-md-12">
-            <div class="p-3 text-justify">
-              <!-- Embedding video -->
-
-
-              <!-- Paste your embed video link here -->
-              <iframe width="972" height="547" class="youtube-video"
-                src="https://www.youtube.com/embed/RVfudixm59U?list=PLM-vGSGVntt2yvfeARDivsw0HMcSi8QAo"
-                title="YouTube video player" frameborder="0"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                allowfullscreen></iframe>
-              <iframe width="991" height="547" class="youtube-video"
-                src="https://www.youtube.com/embed/eUfw3LoML0k?list=PLM-vGSGVntt2yvfeARDivsw0HMcSi8QAo"
-                title="YouTube video player" frameborder="0"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                allowfullscreen></iframe>
-              <iframe width="972" height="547" class="youtube-video"
-                src="https://www.youtube.com/embed/e5vnJOWEG70?list=PLM-vGSGVntt2yvfeARDivsw0HMcSi8QAo"
-                title="YouTube video player" frameborder="0"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                allowfullscreen></iframe>
-              <iframe width="972" height="547" class="youtube-video"
-                src="https://www.youtube.com/embed/dkzLqbHuPfY?list=PLM-vGSGVntt2yvfeARDivsw0HMcSi8QAo"
-                title="YouTube video player" frameborder="0"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                allowfullscreen></iframe>
-              <iframe width="972" height="547" class="youtube-video"
-                src="https://www.youtube.com/embed/g3lF1AJn1iU?list=PLM-vGSGVntt2yvfeARDivsw0HMcSi8QAo"
-                title="YouTube video player" frameborder="0"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                allowfullscreen></iframe>
-              <iframe width="972" height="547" class="youtube-video"
-                src="https://www.youtube.com/embed/hRl-KWZSnwc?list=PLM-vGSGVntt2yvfeARDivsw0HMcSi8QAo"
-                title="YouTube video player" frameborder="0"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                allowfullscreen></iframe>
-              <iframe width="972" height="547" class="youtube-video"
-                src="https://www.youtube.com/embed/6NAUwWxbbfE?list=PLM-vGSGVntt2yvfeARDivsw0HMcSi8QAo"
-                title="YouTube video player" frameborder="0"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                allowfullscreen></iframe>
-              <iframe width="972" height="547" class="youtube-video"
-                src="https://www.youtube.com/embed/F66uDK0TQ7A?list=PLM-vGSGVntt2yvfeARDivsw0HMcSi8QAo"
-                title="YouTube video player" frameborder="0"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                allowfullscreen></iframe>
-              <iframe width="972" height="547" class="youtube-video"
-                src="https://www.youtube.com/embed/yDO7B6tFtiU?list=PLM-vGSGVntt2yvfeARDivsw0HMcSi8QAo"
-                title="YouTube video player" frameborder="0"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                allowfullscreen></iframe>
-
-
-              <!-- embedding video finish -->
-            </div>
-          </div>
-
-        </div>
+        <iframe width="100%" height="673"
+          src="https://www.youtube.com/embed/videoseries?list=PLM-vGSGVntt2yvfeARDivsw0HMcSi8QAo&ab_channel=Learnwithus"
+          title="YouTube video player" frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+          allowfullscreen></iframe>
 
       </div>
 
@@ -108,7 +53,9 @@
 
         <h1>Sheet 2</h1>
 
-        <p>"Note: All the orthographic projections are done in Third Angle Of Projection"</p>
+        <p>"Note: It is suggested to watch the Guide Video First before starting the Tutorial"</p>
+        <p>Trust me. It worth it... You Won't Regrate</p>
+
 
         <a href="3d models/sheet2/1.html"><img src="images/sheet2/1.jpg"></a>
         <a href="3d models/sheet2/2.html"><img src="images/sheet2/2.jpg"></a>
