--- a/3d models/sheet2/3.html
+++ b/3d models/sheet2/3.html
@@ -1,18 +1,61 @@
-<!DOCTYPE html>
-<html lang="en" dir="ltr">
+<!doctype html>
+<html lang="en">
+<meta http-equiv="content-type" content="text/html;charset=utf-8" />
 
 <head>
+  <!-- Required meta tags -->
   <meta charset="utf-8">
-  <link rel="stylesheet" href="https://arun457.github.io/3Dmodels/css/orthographic.css" type="text/css">
-  <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
-  <title>Orthographic Projection</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <!-- Bootstrap CSS -->
+  <link href="https://arun457.github.io/3Dmodels/css/bootstrap.min.css" rel="stylesheet" />
+  <link rel="stylesheet" href="https://arun457.github.io/3Dmodels/css/model-viewer.css">
+  <link rel="shortcut icon" href="https://arun457.github.io/3Dmodels/images/favicon.ico" type="image/x-icon">
+  <title>Solutions</title>
+
 </head>
 
 <body>
-  
+
+  <div class="p-3">
+
+    <ul class="nav nav-tabs" id="myTab" role="tablist">
+      <li class="nav-item" role="presentation">
+        <a class="nav-link active" id="model-tab" data-toggle="tab" href="#modeltab" role="tab" aria-controls="model"
+          aria-selected="true">Solution</a>
+      </li>
+      <li class="nav-item" role="presentation">
+        <a class="nav-link" id="orthographic-tab" data-toggle="tab" href="#orthographic" role="tab"
+          aria-controls="orthographic" aria-selected="false">Guide</a>
+      </li>
+    </ul>
+
+    <div class="tab-content" id="myTabContent">
+
+      <div class="tab-pane fade show active" id="modeltab" role="tabpanel" aria-labelledby="model-tab">
+        <!-- Paste your orthographic projection Here -->
+
+        <img id="orthographic" src="solutions/3.jpg" alt="Orthographic Projection">
 
 
-  <img src="images/FigureP5.1.png">
+        <!-- End of orthographic projection -->
+      </div>
+
+      <!-- -------------------------------------------------------------------------------------------------->
+      <div class="tab-pane fade show" id="orthographic" role="tabpanel" aria-labelledby="orthographic-tab">
+        <!-- Paste the guide Here -->
+        <img id="guide" src="" alt="Guide">
+
+        <!-- End of guide -->
+      </div>
+
+    </div>
+
+  </div>
+
+  <script src="https://arun457.github.io/3Dmodels/js/jquery-3.5.1.slim.min.js"></script>
+  <script src="https://arun457.github.io/3Dmodels/js/bootstrap.min.js"></script>
+  <script src="https://arun457.github.io/3Dmodels/js/popper.min.js"></script>
 
 </body>
 
