--- a/contents.html
+++ b/contents.html
@@ -68,6 +68,14 @@
 
         <h1 class="heading">Homepage</h1>
 
+        <a href="sheet1.html"><img src="images/sheets/sheet1.jpg"></a>
+
+        <a href="sheet2.html"><img src="images/sheets/sheet2.jpg"></a>
+
+        <a href="sheet3.html"><img src="images/sheets/sheet3.jpg"></a>
+
+        <a href="sheet4.html"><img src="images/sheets/sheet4.jpg"></a>
+
         <a href="sheet5.html"><img src="images/sheets/sheet5.jpg"></a>
 
         <a href="sheet6.html"><img src="images/sheets/sheet6.jpg"></a>
