--- a/3d models/sheet2/1.html
+++ b/3d models/sheet2/1.html
@@ -45,7 +45,8 @@
       <div class="tab-pane fade show" id="orthographictab" role="tabpanel" aria-labelledby="orthographic-tab">
         <!-- Paste the guide Here -->
 
-        <iframe src="guide/links.html" frameborder="0"></iframe>
+        <embed src="guide/google-drive.pdf" width="100%" height="1000px"></embed>
+        <!-- <iframe src="guide/links.html" frameborder="0"></iframe> -->
 
         <!-- End of guide -->
       </div>
