--- a/3d models/sheet2/9.html
+++ b/3d models/sheet2/9.html
@@ -25,7 +25,7 @@
           aria-selected="true">Solution</a>
       </li>
       <li class="nav-item" role="presentation">
-        <a class="nav-link" id="orthographic-tab" data-toggle="tab" href="#orthographic" role="tab"
+        <a class="nav-link" id="orthographic-tab" data-toggle="tab" href="#orthographictab" role="tab"
           aria-controls="orthographic" aria-selected="false">Guide</a>
       </li>
     </ul>
@@ -43,9 +43,9 @@
       </div>
 
       <!-- -------------------------------------------------------------------------------------------------->
-      <div class="tab-pane fade show" id="orthographic" role="tabpanel" aria-labelledby="orthographic-tab">
+      <div class="tab-pane fade show" id="orthographictab" role="tabpanel" aria-labelledby="orthographic-tab">
         <!-- Paste the guide Here -->
-        <img id="guide" src="" alt="Guide">
+        <embed src="guide/9.pdf" width="100%" height="1000px"></embed>
 
         <!-- End of guide -->
       </div>
