--- a/3d models/sheet2/7.html
+++ b/3d models/sheet2/7.html
@@ -44,7 +44,7 @@
       <!-- -------------------------------------------------------------------------------------------------->
       <div class="tab-pane fade show" id="orthographictab" role="tabpanel" aria-labelledby="orthographic-tab">
         <!-- Paste the guide Here -->
-        <embed src="guide/7.pdf" width="100%" height="785px></embed>
+        <embed src="guide/7.pdf" width="100%" height="785px"></embed>
 
         <!-- End of guide -->
       </div>
