--- a/3d models/sheet2/9.html
+++ b/3d models/sheet2/9.html
@@ -45,7 +45,7 @@
       <!-- -------------------------------------------------------------------------------------------------->
       <div class="tab-pane fade show" id="orthographictab" role="tabpanel" aria-labelledby="orthographic-tab">
         <!-- Paste the guide Here -->
-        <embed src="guide/9.pdf" width="100%" height="785px></embed>
+        <embed src="guide/9.pdf" width="100%" height="785px"></embed>
 
         <!-- End of guide -->
       </div>
