--- a/index.html
+++ b/index.html
@@ -11,7 +11,22 @@
 <body>
   <h1>Welcome To 3D model for engineering by Arun Shrestha</h1>
   <!-- <p><a href="contents.html">Let's go</a></p> -->
-  <a href="contents.html"><button>Let's go</button></a>
+  <div id="liscence-agreement">
+    <p id="disclaimer">Disclaimer:</p>
+    <p class="terms">This Website is to be taken as a reference guide for Engineering Drawing-I Tutorials.</p>
+    <p class="terms">Not as a Cheat Sheet for easy copying of Solutions.</p>
+    <p class="terms">Real Mastery Comes From Self Practice Only.</p>
+    <P id="myterms">I am not responsible for any misuse of this Website as Cheat Sheet, Which if done, will surely lead
+      to Failure in
+      Self Learning</P>
+    <P id="accept">I accept the Terms and Condition of Use:</P>
+    <div id="yesno">
+      <a href="contents.html"><button>Yes</button></a>
+      <a href="no.html"><button>No</button></a>
+    </div>
+
+  </div>
+
 </body>
 
 </html>
