--- a/Semester 2/sheet2.html
+++ b/Semester 2/sheet2.html
@@ -51,6 +51,13 @@
         <a href="3d models/sheet2/Figure2c.html"><img src="images/sheet2/Figure2c.jpg"></a>
         <a href="3d models/sheet2/Figure2d.html"><img src="images/sheet2/Figure2d.jpg"></a>
 
+        <a href="3d models/sheet2/2.html"><img src="images/sheet2/2.jpg"></a>
+        <a href="3d models/sheet2/3.html"><img src="images/sheet2/3.jpg"></a>
+        <a href="3d models/sheet2/4.html"><img src="images/sheet2/4.jpg"></a>
+        <a href="3d models/sheet2/5.html"><img src="images/sheet2/5.jpg"></a>
+        <a href="3d models/sheet2/6.html"><img src="images/sheet2/6.jpg"></a>
+
+
 
       </div>
 
