--- a/index.html
+++ b/index.html
@@ -1,16 +1,32 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Error</title>
+  <meta charset="utf-8">
+  <title>3d Model For Engineering</title>
+  <link rel="stylesheet" href="css/mycss.css" type="text/css">
+  <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
 </head>
 
 <body>
-    <h1>Opps!!! Temporary Error</h1>
-    <h1>Contact the owener of this site to fix this Error</h1>
+  <h1>Welcome To 3D model for engineering by Arun Shrestha</h1>
+  <!-- <p><a href="contents.html">Let's go</a></p> -->
+  <div id="liscence-agreement">
+    <p id="disclaimer">Disclaimer:</p>
+    <p class="terms">This Website is to be taken as a reference guide for Engineering Drawing-I Tutorials.</p>
+    <p class="terms">Not as a Cheat Sheet for easy copying of Solutions.</p>
+    <p class="terms">Real Mastery Comes From Self Practice Only.</p>
+    <P id="myterms">I am not responsible for any misuse of this Website as Cheat Sheet, Which if done, will surely lead
+      to Failure in
+      Self Learning</P>
+    <P id="accept">I accept the Terms and Condition of Use:</P>
+    <div id="yesno">
+      <a href="Semester.html"><button>Yes</button></a>
+      <a href="no.html"><button>No</button></a>
+    </div>
+
+  </div>
+
 </body>
 
 </html>
