--- a/Semester 1/contents.html
+++ b/Semester 1/contents.html
@@ -47,16 +47,16 @@
 
     <div class="tab-content" id="myTabContent">
       <div class="tab-pane fade" id="Questions" role="tabpanel" aria-labelledby="Questions-tab">
-        <h1>Password: sthaarun.com.np</h1>
+        <!-- <h1>Password: sthaarun.com.np</h1> -->
         <!-- Resources Starts-->
-        <a href="https://drive.google.com/file/d/1hNvknCda5O4oC27rWNirjFhQtJPwUmcF/view?usp=sharing"><button
+        <!-- <a href="https://drive.google.com/file/d/1hNvknCda5O4oC27rWNirjFhQtJPwUmcF/view?usp=sharing"><button
             id="tutorial">Tutorial</button></a>
         <a href="https://drive.google.com/file/d/1eT3faI9Phae9ympI_l1QkxdboQ3LEtaI/view?usp=sharing"><button
             id="lettering-sheet">Lettering Sheet</button></a>
         <a href="https://drive.google.com/file/d/1BkWn2P3ekZsT0dGmL0kCy_1JPdk0hWSE/view?usp=sharing"><button
             id="past-questions">Past Questions</button></a>
         <a href="https://drive.google.com/file/d/1iGfns-WthYEDiua9TU3hQu-A1W-TO23e/view?usp=sharing"><button
-            id="drawing-book">Drawing Book</button></a>
+            id="drawing-book">Drawing Book</button></a> -->
         <!-- Resources Ends -->
 
       </div>
