--- a/Semester 1/contents.html
+++ b/Semester 1/contents.html
@@ -1,16 +1,14 @@
 <!doctype html>
 <html lang="en">
 
-<!-- Mirrored from cwithjen.somee.com/6_Operators.aspx by HTTrack Website Copier/3.x [XR&CO'2014], Wed, 01 Sep 2021 13:43:19 GMT -->
-<!-- Added by HTTrack -->
-<meta http-equiv="content-type" content="text/html;charset=utf-8" /><!-- /Added by HTTrack -->
+<meta http-equiv="content-type" content="text/html;charset=utf-8" />
 
 <head>
-  <!-- Required meta tags -->
+
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <!-- Bootstrap CSS -->
+  
 
   <link href="css/bootstrap.min.css" rel="stylesheet" />
   <link href="css/content.css" rel="stylesheet" />
@@ -47,16 +45,15 @@
 
     <div class="tab-content" id="myTabContent">
       <div class="tab-pane fade" id="Questions" role="tabpanel" aria-labelledby="Questions-tab">
-        <!-- <h1>Password: sthaarun.com.np</h1> -->
         <!-- Resources Starts-->
-        <!-- <a href="https://drive.google.com/file/d/1hNvknCda5O4oC27rWNirjFhQtJPwUmcF/view?usp=sharing"><button
+        <a href="https://drive.google.com/file/d/1Pj7ukXpM-1z0BFke1FjEJBLVK7tS95Q0/view?usp=sharing"><button
             id="tutorial">Tutorial</button></a>
-        <a href="https://drive.google.com/file/d/1eT3faI9Phae9ympI_l1QkxdboQ3LEtaI/view?usp=sharing"><button
+        <a href="https://drive.google.com/file/d/1kPmYqkCiUylIEk7-Hor_jO9raFOOmlTj/view?usp=sharing"><button
             id="lettering-sheet">Lettering Sheet</button></a>
-        <a href="https://drive.google.com/file/d/1BkWn2P3ekZsT0dGmL0kCy_1JPdk0hWSE/view?usp=sharing"><button
+        <a href="https://drive.google.com/file/d/1NuAlg7onKJ91i_Ih6zg3N-4dajxkKJXF/view?usp=sharing"><button
             id="past-questions">Past Questions</button></a>
-        <a href="https://drive.google.com/file/d/1iGfns-WthYEDiua9TU3hQu-A1W-TO23e/view?usp=sharing"><button
-            id="drawing-book">Drawing Book</button></a> -->
+        <a href="https://drive.google.com/file/d/1M8dPX3E1vaGu5m3dbEfq2gvQ5ub6aU4f/view?usp=sharing"><button
+            id="drawing-book">Drawing Book</button></a>
         <!-- Resources Ends -->
 
       </div>
@@ -177,7 +174,5 @@
 
 
 </body>
-
-<!-- Mirrored from cwithjen.somee.com/6_Operators.aspx by HTTrack Website Copier/3.x [XR&CO'2014], Wed, 01 Sep 2021 13:43:19 GMT -->
 
 </html>
