--- a/Semester 1/sheet1.html
+++ b/Semester 1/sheet1.html
@@ -1,16 +1,16 @@
 <!doctype html>
 <html lang="en">
 
-<!-- Mirrored from cwithjen.somee.com/6_Operators.aspx by HTTrack Website Copier/3.x [XR&CO'2014], Wed, 01 Sep 2021 13:43:19 GMT -->
-<!-- Added by HTTrack -->
-<meta http-equiv="content-type" content="text/html;charset=utf-8" /><!-- /Added by HTTrack -->
+
+
+<meta http-equiv="content-type" content="text/html;charset=utf-8" />
 
 <head>
-  <!-- Required meta tags -->
+
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <!-- Bootstrap CSS -->
+  
 
   <link href="css/bootstrap.min.css" rel="stylesheet" />
 
@@ -77,6 +77,6 @@
 
 </body>
 
-<!-- Mirrored from cwithjen.somee.com/6_Operators.aspx by HTTrack Website Copier/3.x [XR&CO'2014], Wed, 01 Sep 2021 13:43:19 GMT -->
+
 
 </html>
