--- a/Semester 1/3d models/sheet7/FigureP7.2.b.html
+++ b/Semester 1/3d models/sheet7/FigureP7.2.b.html
@@ -77,8 +77,7 @@
   <script src="https://sthaarun.com.np/3Dmodels/js/jquery-3.5.1.slim.min.js"></script>
   <script src="https://sthaarun.com.np/3Dmodels/js/bootstrap.min.js"></script>
   <script src="https://sthaarun.com.np/3Dmodels/js/popper.min.js"></script>
-  <!-- <script type="module" src="https://sthaarun.com.np/3Dmodels/js/model-viewer.js"></script> -->
-  <script type="module" src="https://ajax.googleapis.com/ajax/libs/model-viewer/3.1.1/model-viewer.min.js"></script>
+  <script type="module" src="https://sthaarun.com.np/3Dmodels/js/model-viewer.js"></script>
 
 </body>
 
